Git backend with playlists
Support multiple backends of the same type.